--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~51.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-image-picker": "~15.0.5",
+    "expo-linear-gradient": "~13.0.2",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
